--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -2,29 +2,35 @@
     display: flex;
 }
 
-.side-bar {
+// HEADER //
+
+.header {
+
+}
+// LAYOUT FOR DASHBOARD VIEW //
+
+
+#SIDE-BAR {
     .flex-container;
     flex-direction: column;
-	background: transparent;
+    background: transparent;
     z-index: 2;
     //border-right: 1px solid @dividerColor;
     //border-bottom: 1px solid @dividerColor;
     min-width: 200px;
-	padding: 10px;
-	color: #a0a0a0;
+    padding: 10px;
+    color: #a0a0a0;
 }
 
-
-.dashboard-main-container{
-    display:flex;
+.dashboard-main-container {
+    display: flex;
     flex-direction: column;
 }
 
-
+// LAYOUT FOR GECKO DETAIL //
 .gecko-detail-card {
     //border-bottom: 1px solid @dividerColor;
 }
-
 
 .graphs {
     min-height: 200px;
@@ -32,6 +38,7 @@
     //background: @white3;
 }
 
-#weight, #other {
+#weight,
+#other {
     width: 50%;
 }
