--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -3,18 +3,16 @@
 }
 
 // HEADER //
+.header {}
 
-.header {
-
-}
 // LAYOUT FOR DASHBOARD VIEW //
-
+#MAIN-CONTAINER {
+    display: flex;
+    align-items: stretch;
+}
 
 #SIDE-BAR {
-    .flex-container;
-    flex-direction: column;
-    background: transparent;
-    z-index: 2;
+    background: @textColorDark;
     //border-right: 1px solid @dividerColor;
     //border-bottom: 1px solid @dividerColor;
     min-width: 200px;
