--- a/public/assets/css/modules/_metrics.less
+++ b/public/assets/css/modules/_metrics.less
@@ -2,10 +2,11 @@
     @metrics-total-color: ;
     @metrics-male-color: #6c78ab;
     display: flex;
-    padding: 15px;
+    padding: 10px;
     justify-content: center;
     .metric {
         padding: 0 25px;
+        font-weight: bold;
         &.metric-total {
             color: @textColorLight;
         }
@@ -25,8 +26,6 @@
         line-height: 24px;
         padding-top: 4px;
         padding-left: 4px;
-        text-transform: capitalize;
-        font-weight: medium;
         .subunits {
             line-height: 16px;
             font-size: 16px;
