--- a/public/components/GeckoMetrics/GeckoMetricsTemplate.htm
+++ b/public/components/GeckoMetrics/GeckoMetricsTemplate.htm
@@ -1,18 +1,25 @@
 <div class='gecko-metrics'>
     <div class='metric metric-total'>
         <div class='value'>{{metrics.males + metrics.females + metrics.eggs}}</div>
-        <div class='units'>total<div class='subunits'>Geckos</div></div>
+        <div class='units'>Total
+            <div class='subunits'>geckos</div>
+        </div>
     </div>
     <div class='metric metric-male'>
         <div class='value'>{{metrics.males}}</div>
-        <div class='units'>male<div class='subunits'>Geckos</div></div>
+        <div class='units'>Male
+            <div class='subunits'>geckos</div>
+        </div>
     </div>
     <div class='metric metric-female'>
         <div class='value'>{{metrics.females}}</div>
-        <div class='units'>female<div class='subunits'>Geckos</div></div>
+        <div class='units'>Female
+            <div class='subunits'>geckos</div>
+        </div>
     </div>
     <div class='metric metric-eggs'>
         <div class='value'>{{metrics.eggs}}</div>
-        <div class='units'>eggs<div class='subunits'>Incubating</div></div>
-    </div
-</div>
+        <div class='units'>Eggs
+            <div class='subunits'>incubating</div>
+        </div>
+    </div </div>
