--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -3,7 +3,7 @@
     <div id="STATUS-BAR">
         <gecko-metrics></gecko-metrics>
     </div>
-    <div class="flex-container">
+    <div id="MAIN-CONTAINER">
         <div id="SIDE-BAR">
             <div class="notifications">This is where notifications will be</div>
         </div>
