--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -17,7 +17,7 @@ a:hover:not(.link--nohover),
 }
 
 body {
-    background: white;
+    background: black;
     font-family: "Roboto", sans-serif;
     margin: 0;
 }
