--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -6,14 +6,13 @@
 @import "base/_b-modals.less";
 @import "base/_b-text.less";
 @import "base/_b-datatables.less";
-
 @import "layout/_l-grid.less";
 @import "layout/_l-layout.less";
 @import "lib/_font-awesome.less";
-
 @import "modules/_add-event-form.less";
 @import "modules/_event-table.less";
 @import "modules/_egg-table.less";
+@import "modules/_gecko-detail.less";
 @import "modules/_gecko.less";
 @import "modules/_gecko-picker.less";
 @import "modules/_header.less";
