--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -11,14 +11,23 @@
     align-items: stretch;
 }
 
+
+/* Left-side container that starts after the header & status bar and extends to bottoms of page
+Used for notifications in dashboard view and details and photo gallery in gecko detail view */
+
 #SIDE-BAR {
     background: @textColorDark;
-    //border-right: 1px solid @dividerColor;
-    //border-bottom: 1px solid @dividerColor;
     min-width: 200px;
+    width: 33%;
     padding: 10px;
     color: #a0a0a0;
 }
+
+
+/* Container that holds the gecko table within MAIN-CONTAINER */
+
+
+/* May not ne necessary*/
 
 .dashboard-main-container {
     display: flex;
@@ -26,17 +35,17 @@
 }
 
 // LAYOUT FOR GECKO DETAIL //
-.gecko-detail-card {
-    //border-bottom: 1px solid @dividerColor;
+
+/* Container right of side-bar on gecko detail view that holds the events table and weight chart */
+
+#CHARTS {
+    width: 67%;
+    display: flex;
+    flex-direction: column;
 }
 
-.graphs {
-    min-height: 200px;
-    //border: 1px solid @dividerColor;
-    //background: @white3;
-}
-
-#weight,
-#other {
-    width: 50%;
+events-table,
+weight-chart,
+egg-table gecko {
+    width: 100%;
 }
