Added text for status-bar button on detailed view.

--- a/public/assets/css/base/_b-elements.less
+++ b/public/assets/css/base/_b-elements.less
@@ -113,5 +113,16 @@ input .inline {
 }
 
 form {
-	margin: 0;
+    margin: 0;
+}
+
+.float-right {
+    float: right;
+}
+
+.statusbar-button {
+    position: absolute;
+    right: 5px;
+    line-height: 50px;
+    /* needs to match height of status-bar */
 }
