--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -1,22 +1,23 @@
 <!-- CONTAINER FOR GECKO INFORMATION -->
 <div class='gecko-detail-view'>
     <div id="STATUS-BAR">
-        <a href="/"><i class="material-icons">home</i></a>
+
         <span class='detail-name'>
         {{geckoDetail.name}}
         </span>
-         <span class='detail-gender'>
+        <span class='detail-gender'>
 
                     <i class='fa fa-mars male' ng-if="geckoDetail.sex == 'male'" title="male"></i>
                     <i class='fa fa-venus female' ng-if="geckoDetail.sex == 'female'" title="female"></i>
                     <i class='fa fa-question unknown' ng-if="geckoDetail.sex == 'unknown'" title="gender unknown"></i>
             </span>
 
-                <span class='detail-id'>
+        <span class='detail-id'>
 
                          {{geckoDetail.userId || "(no ID entered)"}}
 
                 </span>
+        <a href="/" class="statusbar-button">BACK TO LIST</a>
     </div>
 
     <div id="MAIN-CONTAINER">
