--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -182,6 +182,15 @@ input .inline {
 form {
   margin: 0;
 }
+.float-right {
+  float: right;
+}
+.statusbar-button {
+  position: absolute;
+  right: 5px;
+  line-height: 50px;
+  /* needs to match height of status-bar */
+}
 .valign-wrapper {
   display: flex;
   align-items: center;
