Saving work on add event form refactor

--- a/public/assets/css/modules/_add-event-form.less
+++ b/public/assets/css/modules/_add-event-form.less
@@ -1,49 +1,5 @@
-.add-event-form {
+.AddEventForm {
 	// TODO Integrate this with base styles
-	/*
-	.modal-black-out{
-		width: 100%;
-		height: 100%;
-		background: rgba(0,0,0,0.75);
-		position: fixed;
-		top: 0;
-		left: 0;
-		z-index: 10;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		
-		animation: pulse 0.5s 1;
-	}
-	
-	@keyframes pulse {
-		0% {
-			background-color: rgba(0,0,0,0);
-		}
-		100% {
-			background-color: rgba(0,0,0,0.75);
-		}
-	}
-	*/
-	
-	/*
-	.modal_ {
-		background: white;
-		border-radius: 3px;
-		width: 700px;
-		z-index: 20;
-		
-		animation: drop 0.5s 1;
-	}
-	@keyframes drop {
-		0% {
-			margin-top: -1000px;
-		}
-		100% {
-			margin-top: 0;
-		}
-	}
-	*/
 	
 	.add-event-title {
 		font-size: 20px;
