--- a/public/components/EventsTable/EventsTableTemplate.htm
+++ b/public/components/EventsTable/EventsTableTemplate.htm
@@ -48,5 +48,5 @@
 		<button class="button--raised" style="margin: 0;" ng-click='addEvent()'>Add Event</button>
 	</div>
 
-	<add-event-form show='showAddEventForm' gecko-id="{{geckoId}}" event="eventToEdit"></add-event-form>
+	<!--<add-event-form show='showAddEventForm' gecko-id="{{geckoId}}" event="eventToEdit"></add-event-form>-->
 </div>
