Fixes #59. First stab at a notifications component for individual geckos. Includes several updates to geckoService.js and geckos.js.

--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -22,3 +22,4 @@
 @import "modules/_search-box.less";
 @import "modules/_form-fields.less";
 @import "modules/_add-notification-form.less";
+@import "modules/_notifications-settings.less";
