--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -28,6 +28,7 @@
         <div id="CHARTS">
             <events-table gecko-id="geckoId"></events-table>
             <weight-chart gecko-id="geckoId"></weight-chart>
+			<notifications-settings></notifications-settings>
             <egg-table gecko="geckoDetail"></egg-table>
         </div>
     </div>
