--- a/public/components/PhotoGallery/PhotoGalleryTemplate.htm
+++ b/public/components/PhotoGallery/PhotoGalleryTemplate.htm
@@ -1,19 +1,45 @@
-<div class='photo-gallery'>
+<div class='PhotoGallery'>
 
 	<!-- Primary photo -->
-	<img class='primary-photo' src='{{geckoDetail.primaryPhoto.path}}' ng-if='geckoDetail.primaryPhoto'></img>
-	<img class='primary-photo' src='photos/default.png' ng-if='!geckoDetail.primaryPhoto'></img>
-	
+	<div class='photo-action-bar'>
+		<i class='material-icons' ng-click='showLightbox(photos[curPhoto])' title='Zoom in'>zoom_in</i>
+		<form>
+			<button type='file' ngf-select="uploadFiles($file, $invalidFiles)" accept="image/*">
+				<i class='material-icons' title='Upload or take a photo'>add_a_photo</i>
+			</button>
+		</form>
+		<i class='material-icons' ng-click='bumpCurrentPhoto(-1)' title='Rotate photo backward'>chevron_left</i>
+		<i class='material-icons' ng-click='bumpCurrentPhoto(1)' title='Rotate photo forward'>chevron_right</i>
+	</div>
+	<div class='primary-photo' ng-click='showLightbox(photos[curPhoto])'>
+		<img src='{{photos[curPhoto].path}}'></img>
+	</div>
+
+	<div class='photo-details-bar'>
+		<div class='photo-date-and-caption'>
+			<div class='photo-date'>
+				{{photos[curPhoto].taken | date: 'fullDate'}}
+				<span class='photo-date-relative'>{{getAgeWhenTaken(photos[curPhoto])}} old</span>
+			</div>
+			<div class='photo-caption'>
+				{{photos[curPhoto].caption}}
+			</div>
+		</div>
+	</div>
+
+	<div class='primary-photo' ng-if='!geckoDetail.primaryPhoto'>
+		<img src='photos/default.png'></img>
+	</div>
+
 	<!-- Thumbnails -->
 	<div class='thumbnails'>
-		<img class='thumbnail-photo' ng-repeat='photo in photos' src='{{photo.path}}' ng-click='showLightbox(photo)' ng-if='photo._id != geckoDetail.primaryPhoto.id'>{{photo.path}}</img>
+		<div class='thumbnail-photo' ng-class="{current: $index == curPhoto}" ng-repeat='photo in photos' ng-click='setCurrentPhoto($index)'>
+			<img src='{{photo.path}}'></img>
+		</img>
 	</div>
-	<form>
-		<button type='file' ngf-select="uploadFiles($file, $invalidFiles)" accept="image/*">Upload File</button>
-	</form>
 
 
-
+	<!-- Lightbox -->
 	<div class='lightbox-background' ng-if='selectedPhoto'>
 		<i class="close-icon material-icons" ng-click='hideLightbox()'>close</i>
 
@@ -42,9 +68,11 @@
 				<input type='text' class='caption' placeholder='Enter a caption...' ng-model='options.caption'></input>
 				<i ng-if='options.caption != selectedPhoto.caption' class='edit-icon material-icons' ng-click='setCaption()'>edit</i>
 			</div>
+<!--
 			<div class='action-buttons'>
 				<button class='set-primary-photo-button' ng-click='setPrimaryPhoto(selectedPhoto)'>Set as Primary Photo</button>
 			</div>
+-->
 		</div>
 
 	</div>
