--- a/public/assets/css/modules/_form-fields.less
+++ b/public/assets/css/modules/_form-fields.less
@@ -116,6 +116,7 @@
 		border-bottom: solid 1px #f0f0f0;
 		padding: 1px 4px;
 		border: 0;
+		background: white;
 		&:hover {
 			background: @primary-color;
 			color: white;
