--- a/public/views/DemosView/DemosViewTemplate.htm
+++ b/public/views/DemosView/DemosViewTemplate.htm
@@ -1,4 +1,4 @@
-<div style="padding: 40px;">
+<div style="padding: 40px; background: white;">
 
 	<h1>Generic Modals</h1>
 	<a href="#" ng-click="showAlertModal()">Show Alert Modal</a><br>
@@ -9,5 +9,8 @@
 	<div style='width: 300px; display: inline-block;'><form-field-number label='Number Field' value='form.number'></form-field-number></div>
 	<div style='width: 300px; display: inline-block;'><form-field-date label='Date Field' value='form.date'></form-field-date></div>
 	<div style='width: 300px; display: inline-block;'><form-field-select label='Select Field' value='form.select' options='form.options'></form-field-date></div>
+	<div style='width: 800px;'>
+		<form-field-big-text label='Big Text' value='form.text'></form-field-big-text>
+	</div>
 	
 </div>
