Added a delete and primary photo button

--- a/public/assets/css/modules/_photo-gallery.less
+++ b/public/assets/css/modules/_photo-gallery.less
@@ -1,6 +1,10 @@
 .PhotoGallery {
 	background: transparent;
 	width: 100%;
+    
+    .float-left {
+        float: left;
+    }
 
 	.primary-photo {
 		width: 100%;
