--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -3487,6 +3487,9 @@ egg-table gecko {
   background: transparent;
   width: 100%;
 }
+.PhotoGallery .float-left {
+  float: left;
+}
 .PhotoGallery .primary-photo {
   width: 100%;
   position: relative;
