--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -3911,3 +3911,56 @@ egg-table gecko {
   color: #808080;
   padding: 20px;
 }
+.LoadingScreen {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #eeeeee;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.LoadingScreen .loading-text {
+  text-align: center;
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: bold;
+  color: #a0a0a0;
+}
+.LoadingScreen .loading-text i {
+  display: block;
+  color: #808080;
+  font-size: 60px;
+  animation: LoadingScreen-pulse 1s infinite, LoadingScreen-rotate 1s infinite;
+}
+.LoadingScreen.ng-hide {
+  animation: LoadingScreen-fadeOut 0.5s 1;
+}
+@keyframes LoadingScreen-pulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.25;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes LoadingScreen-rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes LoadingScreen-fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
