--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -23,3 +23,4 @@
 @import "modules/_form-fields.less";
 @import "modules/_add-notification-form.less";
 @import "modules/_notifications-settings.less";
+@import "modules/_loading-screen.less";
