--- a/public/assets/css/modules/_add-event-form.less
+++ b/public/assets/css/modules/_add-event-form.less
@@ -17,6 +17,17 @@
 		display: block;
 		border-bottom: solid 1px #e0e0e0;
 	}
+
+	.display-flex {
+		display: flex;
+	}
+	
+	.flex-half {
+		flex-grow: 1;
+		//flex-shrink: 1;
+		width: 50%;
+	}
+	
 	
 	.add-event-fields {
 		display: flex;
