--- a/public/components/AddEventForm/AddEventFormTemplate.htm
+++ b/public/components/AddEventForm/AddEventFormTemplate.htm
@@ -5,16 +5,16 @@
 		<span ng-if="!event">Create Event</span>
 	</div>
 
-		<div class='add-event-fields'>
-			<div class='field big'>
+		<div class='content'>
+			<div class='display-flex'>
 <!--
 				<div class='label'>Date</div>
 				<input type='date' class='field-date' ng-model='form.date'></input>
 				<div class='field-alerts'>Required</div>
 -->
+				<div class='flex-half'>
 				<form-field-date label='Date' value='form.date'></form-field-date>
-			</div>
-			<div class='field big'>
+				</div>
 <!--
 				<div class='label'><span ng-if='form.type'>Event Type</span></div>
 				<select class='field-select' ng-model='form.type' placeholder='Event Type'>
@@ -28,8 +28,11 @@
 				</select>
 				<div class='field-alerts'></div>
 -->
+				<div class='flex-half'>
 				<form-field-select label='Event' options='form.typeOptions' value='form.type'></form-field-select>
+				</div>
 			</div>
+<!--
 			<div class='field' ng-show="form.type == 'weight'">
 				<div class='label'><span ng-if='form.info.weight'>Weight</span></div>
 				<input type='number' ng-model='form.info.weight' placeholder='Weight'></input>
@@ -45,17 +48,25 @@
 				<input type='text' ng-model='form.notes' placeholder="Notes"></input>
 				<div class='field-alerts'>Optional</div>
 			</div>
+-->
+
+			<div class='display-flex'>
+<!--
+				<div class='label'><span ng-if='form.notes'>Notes</span></div>
+				<input type='text' ng-model='form.notes' placeholder="Notes"></input>
+				<div class='field-alerts'>Optional</div>
+-->
+				<form-field-big-text label='Notes' value='form.notes'></form-field-select>
+			</div>
+
+
 		</div>
 		<div class='field' ng-show="form.type == 'clutch'">
 			<div class='label'><span ng-if='form.info.eggs'>Eggs</span></div>
 			<input type='number' ng-model='form.info.eggs' placeholder='Eggs'></input>
 			<div class='field-alerts'></div>
 		</div>
-		<div class='field huge'>
-			<div class='label'><span ng-if='form.notes'>Notes</span></div>
-			<input type='text' ng-model='form.notes' placeholder="Notes"></input>
-			<div class='field-alerts'>Optional</div>
-		</div>
+
 	</div>
 
 	<!-- Action buttons -->
