Moved metrics to sidebar.

--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -1,11 +1,12 @@
 <div>
     <!-- HEADER STATUS BAR -->
     <div id="STATUS-BAR">
-        <gecko-metrics></gecko-metrics>
+        <div class="notifications">No notifications</div>
     </div>
     <div id="MAIN-CONTAINER">
         <div id="SIDE-BAR">
-            <div class="notifications">This is where notifications will be</div>
+            <gecko-metrics></gecko-metrics>
+
         </div>
         <div class="dashboard-main-container">
 
