Changed status bar for detail view.

--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -1,9 +1,12 @@
+//TODO: Remove the class
 .flex-container {
     display: flex;
 }
 
 // HEADER //
-.header {}
+#STATUS-BAR {
+    min-height: 5vh;
+}
 
 // LAYOUT FOR DASHBOARD VIEW //
 #MAIN-CONTAINER {
