--- a/public/assets/css/modules/_gecko-detail.less
+++ b/public/assets/css/modules/_gecko-detail.less
@@ -1,3 +1,22 @@
+/* Status Bar */
+
+.statusbar-button {
+    line-height: 5vh;
+    padding-left: 10px;
+    /* needs to match height of status-bar */
+}
+
+.statusbar-name {
+    font-size: calc(5vh * 1.5);
+    line-height: 0.6em;
+    font-weight: 900;
+    color: #689f38;
+    text-transform: uppercase;
+    position: absolute;
+    right: 5px;
+}
+
+
 /* Gecko Detail */
 
 .gecko-detail-container {
